public/nopbai/Logs/Contest01/[1][1929834942][Contest01][ce140237][A].c.log
Compile error
[1][1929834942][Contest01][ce140237][A].c: In function ‘main’:
[1][1929834942][Contest01][ce140237][A].c:8:2: error: expected ‘;’ before ‘while’
  while (test--) {
  ^~~~~
